# otel-worker

./: .dev.vars.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
.otel-worker/: .gitignore
fpx/: Cargo.toml
fpx-workers/: Cargo.toml
otel-worker/: .dev.vars.example  .gitignore  Cargo.toml  README.md  package-lock.json  wrangler.toml
otel-worker-cli/: Cargo.toml  README.md
otel-worker-cli/src/: commands.rs  data.rs  events.rs  grpc.rs  main.rs
otel-worker-cli/src/commands/: client.rs  dev.rs  mcp.rs  system.rs  util.rs
otel-worker-cli/src/commands/client/: spans.rs  traces.rs
otel-worker-cli/src/commands/debug/: ws.rs
otel-worker-cli/src/commands/mcp/: http_sse.rs  sse.rs  stdio.rs
otel-worker-cli/src/commands/system/: database.rs
otel-worker-cli/src/data/: tests.rs  util.rs
otel-worker-core/: Cargo.toml  README.md
otel-worker-core/src/: api.rs  config.rs  data.rs
otel-worker-core/src/api/: client.rs  errors.rs  models.rs
otel-worker-core/src/api/handlers/: otel.rs  spans.rs  traces.rs
otel-worker-core/src/api/models/: otel.rs
otel-worker-core/src/data/: models.rs  sql.rs
otel-worker-macros/: Cargo.toml  README.md
otel-worker/.otel-worker/: .gitignore
otel-worker/examples/send-trace/: README.md
otel-worker/src/: data.rs  lib.rs
otel-worker/src/ws/: client.rs  worker.rs
xtask/: Cargo.toml
xtask/src/: commands.rs
xtask/src/commands/: schemas.rs
