[package]
name = "xtask"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
otel-worker-core = { version = "0.1.0", path = "../otel-worker-core" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
typeshare-core = { version = "1.9" }
url = { workspace = true }
